--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
                 <div class="input-container ic1">
                     <input type="text" id="firstname" class="input" placeholder=" " />
                     <div class="cut"></div>
-                    <label for="firstname" class="placeholder">Numele</label>
+                    <label for="firstname" class="placeholder">Prenumele</label>
                 </div>
 
                 <div class="input-container ic2">
                     <input type="text" id="lastname" class="input" placeholder=" " />
                     <div class="cut"></div>
-                    <label for="lastname" class="placeholder">Prenumele</label>
+                    <label for="lastname" class="placeholder">Numele</label>
                 </div>
 
                 <div class="input-container ic2">
